<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">>
        >
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:stretchColumns="3"
            tools:context=".MainActivity">

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/server_host"/>
                <EditText
                    android:id="@+id/serverHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/server_port"/>
                <EditText
                    android:id="@+id/serverPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/username"/>
                <EditText
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/password"/>
                <EditText
                    android:id="@+id/pword"
                    android:inputType="textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/first_name"/>
                <EditText
                    android:id="@+id/firstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>
            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/last_name" />

                <EditText
                    android:id="@+id/lastName"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="end"
                    android:text="@string/email"/>
                <EditText
                    android:id="@+id/em"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:gravity="end"
                    android:text="@string/gender" />

                <RadioGroup
                    android:id="@+id/genderButtons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Female" />

                </RadioGroup>

            </TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/signInButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in_button" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_button" />

            </LinearLayout>
        </TableLayout>
    </ScrollView>